<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_tertiary99"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".Activities.QuizActivity">

    <Button
        android:id="@+id/next"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginBottom="68dp"
        android:backgroundTint="#A08CC3"
        android:text="Next question"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/overskrift"
        android:layout_width="370dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:text="What kind of animal is this?"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/image"
        android:layout_width="206dp"
        android:layout_height="346dp"
        android:layout_marginTop="36dp"
        android:layout_weight="2"
        android:src="@drawable/doggo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/alt0"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginBottom="256dp"
        android:textColor="@color/material_dynamic_tertiary30"
        app:backgroundTint="@color/material_dynamic_neutral95"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/alt1"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginBottom="196dp"
        android:backgroundTint="@color/material_dynamic_neutral95"
        android:textColor="@color/material_dynamic_tertiary30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/alt2"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginBottom="136dp"
        android:backgroundTint="@color/material_dynamic_neutral95"
        android:textColor="@color/material_dynamic_tertiary30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textScore"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>